# finbrand

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  approval.py  charts.py  claims.py  cli.py  content_batch.py  decision_ledger.py  exporter.py  main.py  models.py  newsletter.py  overrides.py  platform.py  publish_packet.py  render_plan.py  rights.py  source_archive.py  source_terms.py  store.py
backend/app/data/: sample_sources.json  source_feeds.json
backend/app/ingest/: __init__.py  bls.py  catalog.py  fred.py  gdelt.py  market_csv.py  rss.py  sec.py
backend/app/pipeline/: __init__.py  compliance.py  entity_mapping.py  scoring.py  script_writer.py
backend/tests/: test_pipeline.py
content/2026-06-28-market-signal/: README.md  critique-and-revision.md  longform-newsletter.md  shortform-scripts.md  source-notes.md  video-production-notes.md  video-quality-review-v05.md  youtube-script.md
content/2026-06-28-market-signal/stories/: fed-pause-not-pivot.json
content/2026-06-28-market-signal/videos/: video_manifest.json
docs/: ARCHITECTURE.md  MOTION_VIDEO_SYSTEM.md  OPERATIONS.md  PROJECT_BRIEF.md  ROADMAP.md  SOURCE_POLICY.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: DraftPanel.tsx  ScoreMeter.tsx  SignalChart.tsx  SourceTrail.tsx  StoryQueue.tsx
scripts/: check.ps1  render_content_videos.ps1  render_motion_first_fed_video.ps1  render_professional_videos.ps1
(+16 files in other folders)
