[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "market-signal-studio-backend"
version = "0.1.0"
description = "Source-verifiable editorial engine for finance content."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "feedparser>=6.0.11",
]

[project.scripts]
market-signal-studio = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
